--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,58 @@ h1, h2{
 p{
     font-family: 'Edu VIC WA NT Beginner', cursive;
 }
+/*********************************
+       Header-start
+*********************************/
+header{
+    justify-content: center;
+    display: flex;
+}
+.header{
+    width: 88%;
+    min-height: 600px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    border-radius: 30px;
+    margin-top: 40px;
+    padding-top: 10px;
+    margin-bottom: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.title-text{
+    color: black;
+    font-size: 4em;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+.details{
+    color: black;
+    font-size: 1.5em;
+    margin-bottom: 60px;
+}
+.header-img img{
+    width: 100%;
+    height: 850px;
+    margin-top: 30px;
+}
+.header-text{
+    margin-right: 50px;
+}
+.header-btn a{
+    text-decoration: none;
+    color: aliceblue;
+    background-color: red;
+    border-radius: 3%;
+    padding: 20px 40px;
+    font-size: 1em;
+}
+.header-text:hover{
+    margin-left: 100px;
+    transition: 2s;
+    font-size: 120%;
+}
+/*********************************
+       Header-end
+*********************************/
